ajout des dernières modifs